# radio-astronomy-playground

./: .codespellignore  .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml  tags.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml
.github/workflows/: ci.yaml  docs-pages.yaml  release-please.yaml  update-citation-date-released.yaml
architecture/: index.html
architecture/adr/: index.html
architecture/adr/001-use-architectural-decision-records/: index.html
architecture/adr/002-manage-dependencies-with-uv/: index.html
architecture/adr/template/: index.html
config/: experiment_config.json
design/: index.html
design/architecture/: index.html
design/architecture/adr/: index.html
design/architecture/c4-diagrams/: index.html
design/domain/: index.html
design/domain/aggregates/: index.html
design/domain/concepts/: index.html
design/domain/event-storming/: index.html
design/requirements/: index.html
design/requirements/s1-user-stories/: index.html
design/requirements/s1-utility-tree/: index.html
design/vision/: index.html
design/vision/impact-map/: index.html
docs/: index.md
docs/architecture/: index.md
docs/architecture/adr/: 001-use-architectural-decision-records.md  002-manage-dependencies-with-uv.md  003-use-panel-for-interactive-experiment-ui.md  index.md
docs/architecture/diagrams/: class-diagram.md  index.md
docs/architecture/event-storming/: index.md  interactive-experiment.md
docs/design/: index.md
docs/design/architecture/: c4-diagrams.md  index.md
docs/design/domain/: aggregates.md  index.md
docs/design/requirements/: index.md  s1-user-stories.md  s1-utility-tree.md
docs/design/vision/: impact-map.md  index.md
docs/domain/: aggregates.md  glossary.md  index.md
docs/domain/concepts/: beam-model.md  imaging.md  index.md  observation.md  (+8 more)
docs/how-to/: get-started.md  index.md
docs/reference/: index.md
docs/tutorials/: index.md
domain/: index.html
domain/aggregates/: index.html
domain/concepts/: index.html
domain/event-storming/: index.html
explanation/: index.html
how-to/: index.html
how-to/get-started/: index.html
notebooks/: example.ipynb  get-started.py  quickstart.ipynb
reference/: index.html
search/: search_index.json
src/package_name/: greet.py
src/seren/: greet.py
src/starbox/: __init__.py  constants.py  greet.py  visibility.py
tags/: index.html
tests/: conftest.py  helpers.py
tests/arch/: test_modularity.py
tests/architecture/: test_modularity.py
tests/integration/: test_calibration_pipeline.py
tests/unit/: test_corruptions.py  test_gains.py  test_geometry.py  test_greet.py  test_imager.py  test_io.py  test_lmn.py  test_observation.py  test_plot.py  test_predict.py  test_skymodel.py  test_solutions.py  test_solver.py  test_solver_benchmark.py  test_telescope.py  test_uvw.py  test_visibility.py
tutorials/: index.html
(+75 files in other folders)
