[project]
name = "seren"
version = "0.0.0"
description = "A python package for exploring radio astronomy."
authors = [
    {name = "Gemma Danks"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<10.0.0",
    "ruff (>=0.13.1,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pyright (>=1.1.406,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material"
]


[tool.coverage.run]
source = ["src/seren"]
omit = [
    "tests/*",
    "conftest.py"
]

[build-system]
requires = ["uv-build>=0.1,<1.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "seren"
module-root = "src"
