[project]
name = "starbox"
version = "0.7.0"
description = "A python package for exploring radio astronomy."
authors = [
    {name = "Gemma Danks"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<10.0.0",
    "ruff>=0.13.1,<0.16.0",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pyright (>=1.1.406,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "nbmake>=1.5.5",
    "pytest-mock>=3.15.1",
]

docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-panzoom-plugin>=0.5.2",
]

[project.optional-dependencies]
viz = [
    "marimo[recommended]>=0.19.4",
    "ipykernel==7.1.0",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
]

[tool.coverage.run]
source = ["src/starbox"]
omit = [
    "tests/*",
    "conftest.py"
]

[build-system]
requires = ["uv-build>=0.1,<1.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "starbox"
module-root = "src"
